    * Improved tests of Sys::IO::Stat.
  [Incompatible Changes]
    * Removed the fstat nad fstat_raw method in the Sys::IO::Stat class because Perl doesn't support these methods and its tests failed.
    * Removed the readlink method in the Sys class and the readlinkp method in the Sys::IO class because I don't know the Windows/Unix portable way to allocate memory yet.
  [New Features]
    * The l method in the Sys::FileTest supports Windows.
    * Added the Sys::IO::Windows class.
    * Added the following methods in the Sys class.
      
      static method is_windows : int ();

      static method A : double ($file : string);

      static method C : double ($file : string);

      static method M : double ($file : string);

      static method O : int ($file : string);

      static method R : int ($file : string);

      static method S : int ($file : string);

      static method W : int ($file : string);

      static method X : int ($file : string);

      static method b : int ($file : string);

      static method c : int ($file : string);

      static method d : int ($file : string);

      static method e : int ($file : string);

      static method f : int ($file : string);

      static method g : int ($file : string);

      static method k : int ($file : string);

      static method l : int ($file : string);

      static method o : int ($file : string);

      static method p : int ($file : string);

      static method r : int ($file : string);

      static method s : long ($file : string);

      static method u : int ($file : string);

      static method w : int ($file : string);

      static method x : int ($file : string);

      static method z : int ($file : string);
      
      static method ioctl : int ($fd : int, $request : int, $request_arg = undef : object of Byte|Short|Int|Long|Float|Double|object);

      static method getuid : int ();

      static method geteuid : int ();

      static method getgid : int ();
