@@ -3,4 +3,5 @@ class Sys::IO::Windows {
   native static method unlink : int ($pathname : string);
   native static method rename : int ($oldpath : string, $newpath : string);
   native static method readlink : int ($path : string, $buf : mutable string, $bufsiz : int);
+  native static method symlink : int ($oldpath : string, $newpath : string);
 }
