@@ -11,6 +11,8 @@
     * Removed the fstat nad fstat_raw method in the Sys::IO::Stat class because Perl doesn't support these methods and its tests failed.
     * Removed the readlink method in the Sys class and the readlinkp method in the Sys::IO class because I don't know the Windows/Unix portable way to allocate memory yet.
   [New Features]
+    * Added the symlink method in the Sys::IO::Windows class.
+      static method symlink : int ($oldpath : string, $newpath : string);
     * The l method in the Sys::FileTest supports Windows.
     * Added the Sys::IO::Windows class.
     * Added the following methods in the Sys class.
